fixing app nav alignment issue

--- a/assets/_styles/components/application-nav.scss
+++ b/assets/_styles/components/application-nav.scss
@@ -32,7 +32,6 @@
     .current,
     .disabled {
       display: block;
-      width: 90%;
       padding: 11px 20px 10px 0;
       border-bottom: 1px solid $grey-3;
       text-decoration: none;
